Fix cover text as alignment was not correct

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ h3 {
 /* hero-image and cover text*/
 
 #hero-outer {
-    height: 100%;
+    height: 500px;
     width: 100%;
     overflow: hidden;
 
@@ -103,7 +103,7 @@ h3 {
 }
 
 #cover-text,
-cover-text h2 {
+cover-text h4 {
     color: #fff;
 }
 
